# portugal_compliance_app

./: MANIFEST.in  README.md  hooks.py  pyproject.toml  requirements.txt  setup.py
docs/: technical_guide.md  user_guide.md
portugal_compliance/: __init__.py  build.json  doc_events.py  hooks.py  modules.txt  patches.txt  print_utils.py  signing.py
portugal_compliance/at_communication/: atcud_service.py  test_atcud_standalone.py
portugal_compliance/config/: desktop.py  site_config.json
portugal_compliance/doctype/compliance_audit_log/: compliance_audit_log.json  (+1 more)
portugal_compliance/documentation/: required_custom_fields_for_signing.md
portugal_compliance/fixtures/: __definition_document_series_backup.json  client_script.json  custom_field.json  document_series_pt.json  portugal_compliance_settings.json  workspace.json
portugal_compliance/hooks/: __init__.py  doc_events.py  signing.py
portugal_compliance/patches/: add_compliance_custom_fields.py  set_workspace_content.py
portugal_compliance/saft/: atcud_service.py  generator.py  saft_generator.py  utils.py  validator.py
portugal_compliance/utils/: __init__.py  at_communication_service.py  fiscal_cancellation.py  fiscal_signature.py  fiscal_validations.py  saft_validator.py
portugal_compliance/xsd/: saftpt1.04_01.xsd
portugal_compliance_app/: modules.txt
portugal_compliance_app/at_communication/: atcud_service.py  test_atcud_standalone.py
portugal_compliance_app/fixtures/: custom_field.json  property_setter.json
portugal_compliance_app/utils/: saft_validator.py
wsdl/: Comunicacao_Series.wsdl
(+26 files in other folders)
